2020-05-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Improve stack operand range assertion.

2020-05-24 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/pdk13/Makefile.in,
	  device/lib/pdk13/__gptrget2.s,
	  device/lib/pdk13/__setjmp.s:
	  Fix missing asm support functions for pdk13.
	* Makefile.common.in,
	  Makefile.in,
	  configure.ac,
	  configure,
	  sdccconf_in.h:
	  Fix --disable-z80n-port configure option.

2020-05-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Stack operand range assertion.

2020-05-23 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCsymt.c (addDecl): removed fix for bug 1253, no longer required
	* support/regression/tests/bug1253.c: new, added

2020-05-23 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCicode.c (operandFromSymbol),
	  src/SDCCmem.c (allocLocal): fix bug #3003
	* support/regression/tests/bug-3003.c: enable test

2020-05-22 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCicode.c,
	  src/SDCCicode.h: new support functions for updating operands
	                   and their def/use
	* src/SDCCopt.c: final fixes for bug #2828

2020-05-21 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-3003.c:
	  Regression test for bug #3003 (disabled until bug is fixed).

2020-05-19 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/iso646.h,
	  support/regression/tests/iso646.c:
	  Fix compl macro.

2020-05-19 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCicode.c: Fix bug #2827

2020-05-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCBBlock.c,
	  src/SDCCerr.c,
	  src/SDCCerr.h,
	  src/SDCCglobl.h,
	  src/SDCCglue.c,
	  src/SDCCmain.c,
	  src/pic14/glue.c,
	  src/pic14/pcode.c,
	  src/pic14/ralloc.c,
	  src/pic16/glue.c,
	  src/pic16/pcode.c,
	  src/pic16/ralloc.c,
	  src/z80/main.c:
	  Improve file open error messages (patch by jbit).

2020-05-17 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx: